<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.pitest</groupId>
	<organization>
	<name>org.pitest</name>
	</organization>
	<artifactId>pitest-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.5.2-SNAPSHOT</version>
	<name>pitest-parent</name>
	<url>http://pitest.org</url>
	<description>Mutation testing system for java - parent project</description>
	<scm>
		<url>https://github.com/hcoles/pitest</url>
		<connection>scm:git:git@github.com:hcoles/pitest.git</connection>
		<developerConnection>scm:git:git@github.com:hcoles/pitest.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<issueManagement>
		<url>https://github.com/hcoles/pitest/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<developers>
		<developer>
			<id>henry</id>
			<name>Henry Coles</name>
			<email>henry@pitest.org</email>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Marvin H Froeder</name>
			<email>velo dot br at gmail dot com</email>
			<url>about.me/velo</url>
		</contributor>
		<contributor>
			<name>Rahul Gopinath</name>
			<email>rahul@gopinath.org</email>
			<url>http://rahul.gopinath.org</url>
		</contributor>
		<contributor>
			<name>Artem Khvastunov</name>
			<email>contact@artspb.me</email>
			<url>https://artspb.me</url>
		</contributor>
	</contributors>

	<modules>
		<module>pitest-build-config</module>
		<module>pitest</module>
                <module>pitest-entry</module>
                <module>pitest-maven</module>
                <module>pitest-ant</module>
		<module>pitest-command-line</module>
		<module>pitest-html-report</module>
		<module>pitest-maven-verification</module>
		<module>pitest-aggregator</module>
		<module>pitest-java8-verification</module>
	</modules>

	<prerequisites>
		<maven>3.2.5</maven>
	</prerequisites>

	<profiles>
			<profile>
			<id>java8</id>
			<!-- Groovy verifiation currently not working with java 9 -->
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<modules>
				<module>pitest-groovy-verification</module>
			</modules>
		</profile>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>owasp-dependency-check</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.owasp</groupId>
						<artifactId>dependency-check-maven</artifactId>
						<version>5.3.0</version>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<!-- common dependencies used in all subprojects -->
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>3.3.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.9.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.pitest.quickbuilder</groupId>
			<artifactId>quickbuilder</artifactId>
			<version>1.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>

		<!-- specification of versions of all plugins used in any module also common 
			configuration is specified there (but module-specific stuff is specified 
			in other pom.xml files) -->
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>2.4.2</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.scm</groupId>
							<artifactId>maven-scm-provider-gitexe</artifactId>
							<version>1.9.4</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.1.0</version>
					<dependencies>
						<dependency>
							<groupId>org.pitest</groupId>
							<artifactId>pitest-build-config</artifactId>
							<version>1.5.2-SNAPSHOT</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<id>checkstyle</id>
							<phase>validate</phase>
							<goals>
								<goal>check</goal>
							</goals>
							<configuration>
								<failOnViolation>true</failOnViolation>
								<configLocation>pitest/checkstyle.xml</configLocation>
								<sourceDirectories>
									<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
								</sourceDirectories>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.surefire</groupId>
							<artifactId>surefire-junit47</artifactId>
							<version>${maven.surefire-plugin.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<testNGArtifactName>none:none</testNGArtifactName>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>${maven.failsafe-plugin.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.surefire</groupId>
							<artifactId>surefire-junit47</artifactId>
							<version>${maven.surefire-plugin.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<!-- versions of libraries which are used in different projects or which 
		are used for few artifacts -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<asm.version>8.0</asm.version>
		<ant.version>1.9.4</ant.version>
		<hamcrest.version>1.3</hamcrest.version>
		<junit.version>4.11</junit.version>
		<maven-verifier>1.5</maven-verifier>
		<maven.version>2.2.1</maven.version>
		<powermock.version>1.7.3</powermock.version>
		<surefire.version>2.17</surefire.version>
		<testng.version>6.9.10</testng.version>
		<slf4j.version>1.7.12</slf4j.version>

		<maven.failsafe-plugin.version>${surefire.version}</maven.failsafe-plugin.version>
		<maven.surefire-plugin.version>${surefire.version}</maven.surefire-plugin.version>
	</properties>

</project>
